# uploader

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci_tests.yaml
imqcam_uploaders/guis/: file_uploader_gui.py
imqcam_uploaders/uploaders/: file_uploader.py  imqcam_uploader.py
imqcam_uploaders/utilities/: argument_parsing.py  girder.py  hashing.py
notebooks/: eos_file_parsing.ipynb  processing_group_uploads.ipynb
schema/: build_example_data.json  build_schema.json  build_ui_schema.json  eos_schema.json  eos_ui_schema.json  powder_example_data.json  powder_shema.json  powder_ui_schema.json  printer_build_schema.json  raw_powder_shema.json
tests/: fixtures.py  test_argument_parsing.py  test_file_uploader.py  test_file_uploader_gui.py  test_formatting.py  test_formatting_and_linting.py  test_girder.py  test_hashing.py  test_scripts.py
