[tool.poetry]
name = "imqcam-uploaders"
version = "0.1.0"
description = "A package for uploading files and metadata to the IMQCAM Girder instance/data.imqcam.org"
authors = ["Maggie Eminizer <margaret.eminizer@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
girder-client = "^3.2.2"
openmsitoolbox = "^1.2.3"
tqdm = "^4.66.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
faker = "^23.3.0"
black = "^24.2.0"
pylint = "^3.1.0"
coverage = "^7.4.3"
pytest-cov = "^4.1.0"
toml = "^0.10.2"


[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
numpy-stl = "^3.1.1"
ipympl = "^0.9.3"

[tool.poetry.scripts]
upload_file = "imqcam_uploaders.uploaders.file_uploader:main"
upload_file_gui = "imqcam_uploaders.guis.file_uploader_gui:main"

[tool.pytest.ini_options]
addopts = "--log-cli-level=INFO --cov=imqcam_uploaders --cov-report=term-missing --cov-fail-under=98"
filterwarnings = [
    "error",
    'ignore:pkg_resources is deprecated:DeprecationWarning',
]

[tool.pylint]
reports = "no"
score = "no"
max-args = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
